# nasiko

./: .env.local.example  .gitignore  .nasiko-local.env.example  .nasiko-local.env.save  BUILDATHON_DEMO.md  BUILDTHON.md  BUILDTHON_SOLUTION.md  CODEBASE_SUMMARY.md  CODE_OF_CONDUCT.md  DEMO.md  Dockerfile.request-layer  Dockerfile.worker  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_VALIDATION_CHECKLIST.md  LOCAL_SETUP.md  Makefile  README-RESILIENCE.md  README.md  RESILIENT_SOLUTION_SUMMARY.md  agents.py  cache.py  docker-compose.local.yml  docker-compose.override.yml  docker-compose.rarl.yml  feature.md  hackathon_demo_app.py  limiter.py  litellm_config.yaml  main.py  models.py  pyproject.toml  queue_manager.py  request_manager.py  stats.py  stress_test.py  test_integration.py
agent-gateway/: DEMO.ps1  DEPLOYMENT_AND_OPERATIONS.md  FILE_REFERENCE_GUIDE.md  RESILIENT_INTEGRATION_GUIDE.py  RESILIENT_REQUEST_LAYER_DESIGN.md  cache.py  dashboard.py  docker-compose.yml  litellm-config.yaml  main.py  monitoring.py  ratelimit.py  requirements.txt  resilient_config.py
agent-gateway/request-manager/: Dockerfile  pyproject.toml  requirements.txt
agent-gateway/request-manager/request_manager/: __init__.py  cache.py  circuit_breaker.py  dashboard.py  limiter.py  main.py  metrics.py  models.py  proxy.py  redis_keys.py  settings.py  singleflight.py  target_resolver.py
agent-gateway/request-manager/src/: cache.py  config.py  dashboard.py  main.py  rate_limiter.py
agent-gateway/request-manager/tests/: conftest.py  test_cache_policy.py  test_limiter.py  test_singleflight.py  test_target_resolver.py
agents/a2a-business-intelligence/: AgentCard.json  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agents/a2a-business-intelligence/src/: __main__.py  bi_toolset.py  openai_agent.py  openai_agent_executor.py
agents/a2a-data-analysis/: AgentCard.json  Dockerfile  docker-compose.yml  pyproject.toml
agents/a2a-data-analysis/src/: __main__.py  data_analysis_agent.py  data_analysis_toolset.py
agents/a2a-gateway-demo/: AgentCard.json  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agents/a2a-gateway-demo/src/: __main__.py  gateway_agent_executor.py  gateway_executor.py  main.py
agents/callsense/v1.0.0/: Dockerfile  docker-compose.yml  pyproject.toml  run-demo.ps1  test-process-audio.ps1
agents/callsense/v1.0.0/src/: valsea_client.py
agents/nasiko-observability-agent/: pyproject.toml
agents/nasiko-observability-agent/src/: observability_agent_executor.py
agents/nasiko-observability-agent/v1.0.0/: AgentCard.json  Dockerfile  docker-compose.yml
agents/nasiko-observability-agent/v1.0.0/src/: __main__.py
agents/nasiko-traffic-agent/: AgentCard.json  pyproject.toml
agents/nasiko-traffic-agent/src/: __main__.py  traffic_agent_executor.py
agents/nasiko-traffic-agent/v1.0.0/: Dockerfile  docker-compose.yml
app/: Dockerfile  implementationPlan.md  main.py  pyproject.toml
buildathon-resilient-request-layer/: .env.example  package-lock.json  package.json
cli/: main.py
config/: litellm_config.yaml
demo/: run_demo.sh
docs/: GATEWAY_DESIGN.md  LLM_GATEWAY.md  agent-authoring.md  buildathon-resilient-request-layer.md  buildthon-demo.md  getting-started.md  llm-gateway.md  llm_gateway.md  mcp-publishing.md  mcp-servers.md  request-layer.md  titan-metrics-dashboard.md
examples/agents/gateway-llm-agent/: AgentCard.json  Dockerfile  agent.py  docker-compose.yml  pyproject.toml
examples/mcp-weather-server/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
examples/mcp-weather-server/src/: main.py
litellm/: README.md  config.yaml
llm-gateway/: litellm_config.yaml
metrics-dashboard/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
nasiko-pkg/: pyproject.toml
orchestrator/: agent_builder.py  config.py  docker_utils.py  gateway_key_manager.py  instrumentation_injector.py  mcp_bridge.py  mcp_bridge_service.py  mcp_sdk_patch.py  redis_stream_listener.py  registry_manager.py  requirements.txt  superuser_credentials.json  virtual_keys_repository.py
rarl/: .cursorrules  .env.example  Dockerfile  README.md  requirements.txt
request-layer/: ARCHITECTURE.md  AgentCard.json  Dockerfile  README.md  requirements.txt
resilience-service/: Dockerfile  cache_manager.py  circuit_breaker.py  dashboard.html  main.py  metrics.py  queue_manager.py  rate_limiter.py  requirements.txt
resilient-agent-layer/: Dockerfile  Dockerfile.agent  README.md  agents.json  docker-compose.yml  package_agents.py  pitch.md  requirements.txt
resilient-layer/: Dockerfile  cache_engine.py  coalescer.py  dashboard.py  demo.py  main.py  metrics.py  queue_manager.py  rate_limiter.py  requirements.txt  test_cache.py  test_redis.py
scripts/: benchmark-resilient-layer.ps1  benchmark-resilient-layer.sh  demo_resilient_request_layer.py
services/request-layer/: AgentCard.json  Dockerfile  load_test.py  pyproject.toml  requirements.txt
services/request-layer/src/: cache.py  config.py  detector.py  docker_client.py  embeddings.py  ghost_queue.py  kong_client.py  main.py  monitor.py  queue.py  reallocation.py
services/request-layer/src/static/: dashboard.html
srishti_demo_agent/: README.md  docker-compose.yml  main.py
srishti_frontend/: index.html  package-lock.json  package.json
tests/: requirements.txt  test_cli_web_path_alignment.py  test_gateway_integration.py  test_kong_mcp_routing.py  test_log_buffer.py  test_mcp_deploy_list_callable_traces.py  test_mcp_list_cli.py  test_mcp_upload_and_manifest.py  test_observability_agent_metrics.py  test_platform_logs_service.py  test_remote_mcp_registration.py  test_stdio_http_bridge.py
traffic-controller/: main.py  requirements.txt
(+504 files in other folders)
