[project]
name = "nasiko-observability-agent"
version = "1.0.0"
description = "AI observability agent for Nasiko monitoring"
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk>=0.3.0,<1.0.0",
    "click>=8.1.8",
    "httpx>=0.28.1",
    "openai>=1.57.0",
    "uvicorn>=0.34.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
