[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-weather-server"
version = "1.0.0"
description = "Example MCP Server - Weather Tool"
authors = [{name = "Nasiko Team"}]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "ruff>=0.0.250",
]
